<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/dialog_based_preferences">

        <EditTextPreference
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:key="@string/pref_location_key"
            android:singleLine="true"
            android:title="@string/pref_location_label"
           />

        <ListPreference
            android:defaultValue="@string/pref_temp_unit_system_metric"
            android:dialogTitle="@string/pref_temp_unit_dialog_title"
            android:entries="@array/pref_temp_unit_entries"
            android:entryValues="@array/pref_temp_unit_entryvalues"
            android:key="@string/pref_temp_unit_key"
            android:title="@string/pref_temp_unit_label"
            />

    </PreferenceCategory>

</PreferenceScreen>